Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Cawtama on GitHub by cawtama</title>
+    <meta name="description" content="Cawtama on GitHub : No words for now.">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Cawtama on GitHub</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Cawtama on GitHub</h1>
-        <p>No words for now.</p>
-        <p class="view"><a href="https://github.com/cawtama">View the Project on GitHub <small>cawtama</small></a></p>
-        <ul>
-          <li class="single"><a href="https://github.com/cawtama/cawtama.github.io">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/cawtama">View on GitHub</a>
+
+          <h1 id="project_title">Cawtama on GitHub</h1>
+          <h2 id="project_tagline">No words for now.</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h3>
 <a id="tiny-tiny" class="anchor" href="#tiny-tiny" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tiny, tiny</h3>
 
-<p><a href="https://cawtama.github.io/bio">bio</a></p>
+<p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
-<p><a href="https://cawtama.github.io/cawters">about cawters</a></p>
+<p><a href="https://cawtama.github.io/cawters">About cCwters</a></p>
 
-<p><a href="https://cawtama.github.io/cawtlinks">various links</a></p>
+<p><a href="https://cawtama.github.io/cawtlinks">CawtLinks</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
@@ -40,10 +42,15 @@
 <p>Far out, for now.</p>
       </section>
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
