Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Cawtama on GitHub : No words for now.">
+    <title>Cawtama on GitHub by cawtama</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Cawtama on GitHub</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Cawtama on GitHub</h1>
+        <p>No words for now.</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cawtama">View on GitHub</a>
 
-          <h1 id="project_title">Cawtama on GitHub</h1>
-          <h2 id="project_tagline">No words for now.</h2>
+        <p class="view"><a href="https://github.com/cawtama">View My GitHub Profile</a></p>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+      </header>
+      <section>
         <h3>
-<a id="tiny-tiny" class="anchor" href="#tiny-tiny" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tiny, tiny</h3>
+<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me</h3>
+
+<h2>
+<a id="tags-computers-software-apps-hardware-apps-electronics-robotics-photography-microcontrollers-audio-electronics-design-web-mobile-apps-editor-writer-cawters-campaign-founder" class="anchor" href="#tags-computers-software-apps-hardware-apps-electronics-robotics-photography-microcontrollers-audio-electronics-design-web-mobile-apps-editor-writer-cawters-campaign-founder" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, editor, writer, cawters campaign founder...</h2>
+
+<h2>
+<a id="programming-languages-c-delphi-java-prolog-asp-php-javascript-flash" class="anchor" href="#programming-languages-c-delphi-java-prolog-asp-php-javascript-flash" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programming languages: C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash</h2>
+
+<h1>
+<a id="always-available-for-cool-projects-" class="anchor" href="#always-available-for-cool-projects-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Always available for cool projects ...</h1>
+
+<p>Test for šumniki ščžđ</p>
 
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
-<p><a href="https://cawtama.github.io/cawters">About cCwters</a></p>
+<p><a href="https://cawtama.github.io/cawters">About Cawters</a></p>
 
 <p><a href="https://cawtama.github.io/cawtlinks">CawtLinks</a></p>
 
@@ -41,16 +48,11 @@
 
 <p>Far out, for now.</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
