Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <p><a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a></p>
 
-<p>_ Far out, for now.</p>
+<p>Far out, for now.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
