Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
 <p>Test for šumniki ščžđ</p>
 
+<p><img src="http://imgur.com/Kc1Xzgx" alt="cawters logo"></p>
+
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
 <p><a href="https://cawtama.github.io/cawters">About Cawters</a></p>
