Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
     <section class="main-content">
       <h1>
-<a id="about-me" class="anchor" href="#about-me" aria-hidden="true"><span class="octicon octicon-link"></span></a>About me</h1>
+<a id="about-cawtama" class="anchor" href="#about-cawtama" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Cawtama</h1>
+
+<p><img src="http://i.imgur.com/xDoOgZc.jpg" alt="Logo"></p>
 
 <p>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, editor, writer, cawters campaign founder...</p>
 
@@ -27,8 +29,7 @@
 
 <p>Test for šumniki ščžđ</p>
 
-<p><img src="http://imgur.com/Kc1Xzgx" alt="cawters logo">
-<a href="http://i.imgur.com/Kc1Xzgx.png">cawters logo</a></p>
+<p><img src="http://i.imgur.com/Kc1Xzgx.png" alt="cawters logo"></p>
 
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
