Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
 
 <p><img src="http://i.imgur.com/xDoOgZc.jpg" alt="Logo"></p>
 
-<p>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, editor, writer, cawters campaign founder...</p>
+<p>Defining Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry, PIC, AVR, Atmel, DIY, editor, writer, cawters campaign founder, ...</p>
 
-<p>Programming languages: C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry</p>
+<p>Located: Ljubljana, Slovenia</p>
 
 <p>Always available for cool projects ...</p>
 
-<p>Test for šumniki ščžđ</p>
-
 <p><img src="http://i.imgur.com/Kc1Xzgx.png" alt="cawters logo"></p>
+
+<p><img src="http://i.imgur.com/WTqTMPW.jpg" alt="Guru"></p>
+
+<p>Under construction. Not working yet.</p>
 
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
@@ -45,7 +47,7 @@
 
 <p><a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a></p>
 
-<p>Far out, for now.</p>
+<p>Far out, for now. Pura Vida!</p>
 
       <footer class="site-footer">
 
