Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>
 <a id="about-cawtama" class="anchor" href="#about-cawtama" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Cawtama</h1>
 
-<p><img src="http://i.imgur.com/xDoOgZc.jpg" alt="Logo"></p>
+<p><img src="http://i.imgur.com/oIokArt.jpg" alt="Cawtama"></p>
 
 <p>Defining Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry, PIC, AVR, Atmel, DIY, editor, writer, cawters campaign founder, ...</p>
 
