--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 <p><img src="http://i.imgur.com/Kc1Xzgx.png" alt="cawters logo"></p>
 
+<p><a href="https://www.cawters.com">Homesite</a></p>
+
 <p><img src="http://i.imgur.com/WTqTMPW.jpg" alt="Guru"></p>
 
 <p>Under construction. Not working yet.</p>
