--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">About Cawtama</h1>
       <h2 class="project-tagline">
 	  <p><a href="https://www.cawters.com">Homesite</a></p>
-	  <p><img src="http://i.imgur.com/WTqTMPW.jpg" alt="Guru"></p>
+	  <p><img src="http://i.imgur.com/oIokArt.jpg" alt="Cawtama"></p>
 	  </h2>
     </section>
 
