--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <h1 class="project-name">About Cawtama</h1>
       <h2 class="project-tagline">
 	  <p><a href="https://www.cawters.com">Homesite</a></p>
-	  <p><img src="http://i.imgur.com/oIokArt.jpg" alt="Cawtama"></p>
 	  </h2>
+	  	  <p><a href="https://www.cawters.com">Homesite</a></p>
+	  
     </section>
 
     <section class="main-content">
@@ -36,7 +37,7 @@
 
 <p><img src="http://i.imgur.com/WTqTMPW.jpg" alt="Guru"></p>
 
-<p>Under construction. Not working yet.</p>
+<p>No words needed.</p>
 
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
