--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
       <h2 class="project-tagline">
 	  <p><a href="https://www.cawters.com">Homesite</a></p>
 	  </h2>
-	  	  <p><a href="https://www.cawters.com">Homesite</a></p>
-	  
     </section>
 
     <section class="main-content">
       <h1>
 <a id="about-cawtama" class="anchor" href="#about-cawtama" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Cawtama</h1>
 
-<p><img src="http://i.imgur.com/oIokArt.jpg" alt="Cawtama"></p>
+<p><img src="https://i.imgur.com/onD1jgp.jpg" alt="Cawtama"></p>
 
 <p>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry, PIC, AVR, Atmel, DIY, editor, writer, cawters campaign founder, ...</p>
 
