--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">About Cawtama</h1>
-      <h2 class="project-tagline">
-	  <p><a href="https://www.cawters.com">Homesite</a></p>
+      <h1 class="project-name">Cawtama</h1>
+      <h2 class="project-tagline">from Cawters::Computer Aided Waste of Time
 	  </h2>
     </section>
 
