--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
 
     <section class="main-content">
       <h1>
-<a id="about-cawtama" class="anchor" href="#about-cawtama" aria-hidden="true"><span class="octicon octicon-link"></span></a>About Cawtama</h1>
+<a id="about-cawtama" class="anchor" href="#about-cawtama" aria-hidden="true"><span class="octicon octicon-link"></span><center></a>About Cawtama</h1>
 
-<p><img src="https://i.imgur.com/onD1jgp.jpg" alt="Cawtama"></p>
+<p><center><img src="https://i.imgur.com/onD1jgp.jpg" alt="Cawtama"></center></p>
 
-<p>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry, PIC, AVR, Atmel, DIY, editor, writer, cawters campaign founder, ...</p>
+<p><center>Tags: computers, software apps, hardware apps, electronics, robotics, photography, microcontrollers, audio electronics, design, web, mobile apps, C, Delphi, Java, Prolog, ASP, PHP, Javascript, Flash, JQuerry, PIC, AVR, Atmel, DIY, editor, writer, cawters campaign founder, ...</center></p>
 
-<p>Located: Ljubljana, Slovenia</p>
+<p><center>Located: Ljubljana, Slovenia. Always available for cool projects ...</center></p>
 
-<p>Always available for cool projects ...</p>
-
-<p><img src="http://i.imgur.com/Kc1Xzgx.png" alt="cawters logo"></p>
-
+<center>
 <p><a href="https://www.cawters.com">Homesite</a></p>
 
 <p><img src="http://i.imgur.com/WTqTMPW.jpg" alt="Guru"></p>
 
-<p>No words needed.</p>
+
 
 <p><a href="https://cawtama.github.io/bio">Bio</a></p>
 
@@ -43,14 +40,12 @@
 <p><a href="https://cawtama.github.io/cawtlinks">CawtLinks</a></p>
 
 <hr>
+<center>
+<p><a href="https://twitter.com/cawtama">Twitter</a> 
+<a href="https://www.facebook.com/breznik.robert">Facebook</a>
+<a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a></p>
 
-<p><a href="https://twitter.com/cawtama">Twitter</a></p>
-
-<p><a href="https://www.facebook.com/breznik.robert">Facebook</a></p>
-
-<p><a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a></p>
-
-<p>Far out for now. Pura Vida!</p>
+<p><center>Far out for now. Pura Vida!</center></p>
 
       <footer class="site-footer">
 
