--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 <center>
 <p><a href="https://twitter.com/cawtama">Twitter</a> 
 <a href="https://www.facebook.com/breznik.robert">Facebook</a>
-<a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a></p>
+<a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a>
+<a href="https://www.instagram.com/cawtama/">Instagram</a></p>
+
+
 
 <p><center>Far out for now. Pura Vida!</center></p>
 
