--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <center>
 <p><a href="https://twitter.com/cawtama">Twitter</a> 
 <a href="https://www.facebook.com/breznik.robert">Facebook</a>
-<a href="http://si.linkedin.com/in/robertbreznik">LinkedIN</a>
+<a href="http://si.linkedin.com/in/robertbreznik">LinkedIn</a>
 <a href="https://www.instagram.com/cawtama/">Instagram</a></p>
 
 
